# Cougr

./: .gitignore  Cargo.toml
.github/workflows/: asteroids.yml  bomberman.yml  pokemon_mini.yml  pong-contract.yml  snake.yml  space_invaders.yml  tetris.yml
cougr-core/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
cougr-core/src/: component.rs  components.rs  entity.rs  event.rs  lib.rs  query.rs  resource.rs  storage.rs  system.rs  systems.rs  world.rs
examples/asteroids/: README.md
examples/asteroids/src/: test.rs
examples/bomberman/: Cargo.toml  README.md
examples/bomberman/src/: lib.rs
examples/flappy_bird/src/: lib.rs
examples/pokemon_mini/: .gitignore  Cargo.toml  README.md  build.txt  clippy.txt  clippy_output.txt  deploy_output.txt
examples/pokemon_mini/src/: components.rs  lib.rs  systems.rs
examples/pong/: Cargo.toml
examples/pong/src/: lib.rs
examples/snake/: README.md
examples/snake/src/: components.rs
examples/space_invaders/: .gitignore  Cargo.toml  README.md
examples/space_invaders/src/: game_state.rs  lib.rs
examples/tetris/: .gitignore  Cargo.toml  README.md
examples/tetris/src/: game_logic.rs  game_state.rs  lib.rs  test.rs  tetromino.rs
examples/tetris/test_snapshots/test/: test_init_game.1.json
examples/tic_tac_toe/: .gitignore  Cargo.toml  README.md
examples/tic_tac_toe/src/: lib.rs  test.rs
src/: component.rs  components.rs  entity.rs  event.rs  lib.rs  query.rs  resource.rs  storage.rs  system.rs  systems.rs  world.rs
